--- a/HTML/AreaPersonale.html
+++ b/HTML/AreaPersonale.html
@@ -17,16 +17,16 @@
 		<div id="Intestazione">
 			<a class="sandwich" onclick="myFunction()">&#9776;</a>
 			<a href="Home.html"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
-			<a onclick="document.getElementById('login').style.display='block'"><img id="user" src="../IMAGES/user.png" alt="login utente"/></a>
+			<a class="active"><img id="user" src="../IMAGES/user.png" alt="login utente"/></a>
 			<div class="Menu" id="myMenu">
-				<a href="Home.html">Home</a>
-				<a href="Attivita.html">Attivit&agrave;</a>
-				<a href="../PHP/News.php"><span xml:lang="en">News</span></a>
-				<a href="../PHP/Galleria.php">Galleria</a>
-				<a href="Calendario.html">Calendario</a>
-				<a href="ChiSiamo.html">Chi siamo</a>
-				<a href="DoveSiamo.html">Dove siamo</a>
-				<button onclick="window.location.href='AreaPersonale.html'">Area Personale</button>
+			<a href="Home.html">Home</a>
+			<a href="Attivita.html">Attivit&agrave;</a>
+			<a href="../PHP/News.php"><span xml:lang="en">News</span></a>
+			<a href="../PHP/Galleria.php">Galleria</a>
+			<a href="Calendario.html">Calendario</a>
+			<a href="ChiSiamo.html">Chi siamo</a>
+			<a href="DoveSiamo.html">Dove siamo</a>
+			<button onclick="window.location.href='AreaPersonale.html'">Area Personale</button>
 			</div>
 		</div>
 		
