--- a/Form.html
+++ b/Form.html
@@ -17,19 +17,19 @@
 		<br/>
 		<div class="spazia">
 		Titolo della News:
-		<input type="text" name="Titolo" maxlength="16"/>
+		<input type="text" name="Titolo" maxlength="16" required />
 		<br/>
 		</div>
 		<div class="spazia">
 		Nome Immagine(Estensione Compresa):
 		<input type="text" name="NomeImmagine" id="NomeImmagine" />
 		File:
-		<input type="file" name="Immagine" id="Immagine"/>
+		<input type="file" name="Immagine" id="Immagine" accept="image/*" required />
 		<br/>
 		</div>
 		<div class="spazia">
 		Descrizione:<br />
-		<textarea name="Descrizione" rows="5" cols="50">Inserisci del testo qui.</textarea>
+		<textarea name="Descrizione" rows="5" cols="50" placeholder="Inserisci del testo qui." required></textarea>
 		<br />
 		</div>
 		<br />
