--- a/HTML/AreaPersonale.html
+++ b/HTML/AreaPersonale.html
@@ -26,7 +26,7 @@
 			<a href="Calendario.html">Calendario</a>
 			<a href="ChiSiamo.html">Chi siamo</a>
 			<a href="DoveSiamo.html">Dove siamo</a>
-			<button onclick="window.location.href='AreaPersonale.html'">Area Personale</button>
+			<button disabled>Area Personale</button>
 			</div>
 		</div>
 		
