--- a/Form galleria.html
+++ b/Form galleria.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
 <head>
-	<title> Form Galleria| Body Evolution</title>
+	<title> Form Galleria | Body Evolution</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
@@ -17,12 +17,12 @@
 		<br/>
 		<div class="spazia">
 		File:
-		<input type="file" name="Immagine" id="Immagine"/>
+		<input type="file" name="Immagine" id="Immagine" accept="image/*" required />
 		<br/>
 		</div>
 		<div class="spazia">
 		Album di appartenenza:<br />
-		<input type="text" name="Album" id="Album" />
+		<input type="text" name="Album" id="Album" required />
 		<br />
 		</div>
 		<br />
