--- a/HTML/AreaPersonale.html
+++ b/HTML/AreaPersonale.html
@@ -9,7 +9,6 @@
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
-	<script type="text/javascript" src="../JS/PswValidation.js" async></script>
 </head>
 
 <body>
@@ -34,64 +33,33 @@
 			<div class="containerChild">
 				<div class="leftContent">
 					<h1>Area Personale</h1>
-					<p>Inserisci le tue credenziali per accedere all'area personale altrimenti compila i campi per registrarti</p>
+					<p>Inserisci le tue credenziali per accedere all'area personale</p>
 				</div>
 				<div class="signupOverlay"></div>
 			</div>
 			<div class="containerChild">
 				<div class="loginWrap">
 					<div class="login-html">
-						<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
-						<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
+						<h1>Sign In</h1>
 						<div class="login-form">
 							<form action="/action_page.php">
-								<div class="sign-in-htm">
-									<div class="group">
-										<label for="username" class="label">Username</label>
-										<input name="username" type="text" class="input" required>
-									</div>
-									<div class="group">
-										<label for="pass" class="label">Password</label>
-										<input name="pass" type="password" class="input" title="La password deve essere lunga almeno 8 caratteri e contenere almeno un numero e una lettera" 
-										required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
-									</div>
-									<div class="group">
-										<input id="check" type="checkbox" class="check" checked>
-										<label for="check"><span class="icon"></span> Ricordati di me</label>
-									</div>
-									<div class="group">
-										<input type="submit" class="button" value="Sign In">
-									</div>
-									<div class="hr"></div>
-									<div class="foot-lnk">
-										<a href="#forgot">Password dimenticata?</a>
-									</div>
+								<div class="group">
+									<label for="codice" class="label">Codice utente</label>
+									<input name="codice" type="text" class="input" required>
 								</div>
-							</form>
-							
-							<form action="/action_page.php">
-								<div class="sign-up-htm">
-									<div class="group">
-										<label for="username" class="label">Username</label>
-										<input name="username" type="text" class="input" required>
-									</div>
-									<div class="group">
-										<label for="pass" class="label">Password</label>
-										<input name="pass" id="pass" type="password" class="input" title="La password deve essere lunga almeno 8 caratteri e contenere almeno un numero e una lettera"
-										required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
-									</div>
-									<div class="group">
-										<label for="pass" class="label">Ripeti Password</label>
-										<input name="pass" id="confirmPass" type="password" class="input" required>
-									</div>
-									<div class="group">
-										<label for="mail" class="label">Email</label>
-										<input name="mail" type="email" class="input" required>
-									</div>
-									<div class="group">
-										<input type="submit" class="button" value="Sign Up">
-									</div>
+								<div class="group">
+									<label for="pass" class="label">Password</label>
+									<input name="pass" type="password" class="input" required>
 								</div>
+								<div class="group">
+									<input id="check" type="checkbox" class="check" checked>
+									<label for="check"><span class="icon"></span> Ricordati di me</label>
+								</div>
+								<div class="group">
+									<input type="submit" class="button" value="Sign In">
+								</div>
+								<div class="line"></div>
+								<a href="#forgot">Password dimenticata?</a>
 							</form>
 						</div>
 					</div>
