--- a/HTML/Form utente.html
+++ b/HTML/Form utente.html
@@ -2,13 +2,14 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
 <head>
-	<title>Area Personale | Body Evolution</title>
+	<title>Form Utente | Body Evolution</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
+	<script type="text/javascript" src="../JS/PswValidation.js" async></script>
 </head>
 
 <body>
@@ -32,31 +33,45 @@
 		<div class="FormContainer">
 			<div class="containerChild">
 				<div class="leftContent">
-					<h1>Area Personale</h1>
-					<p>Inserisci le tue credenziali per accedere all'area personale</p>
+					<h1>Nuovo Utente</h1>
+					<p>Inserisci le credenziali di accesso per registrare un nuovo utente</p>
 				</div>
 				<div class="signupOverlay"></div>
 			</div>
 			<div class="containerChild">
 				<div class="loginWrap">
 					<div class="login-html">
-						<h1>Sign In</h1>
 						<a href="Home.html"><div id="exit">&#215;</div></a>
-						<div class="login-form">
-							<form action="../PHP/login.php" method="POST">
+						<div class="login-form">							
+							<form action="/action_page.php">
 								<div class="group">
 									<label for="codice" class="label">Codice utente</label>
 									<input name="codice" type="text" class="input" required>
 								</div>
 								<div class="group">
-									<label for="pass" class="label">Password</label>
-									<input name="pass" type="password" class="input" required>
+									<label for="nome" class="label">Nome</label>
+									<input name="nome" type="text" class="input" required>
 								</div>
 								<div class="group">
-									<input type="submit" class="button" value="Sign In">
+									<label for="cognome" class="label">Cognome</label>
+									<input name="cognome" type="text" class="input" required>
 								</div>
-								<div class="line"></div>
-								<a href="#forgot">Password dimenticata?</a>
+								<div class="group">
+									<label for="pass" class="label">Password</label>
+									<input name="pass" id="pass" type="password" class="input" title="La password deve essere lunga almeno 8 caratteri e contenere almeno un numero e una lettera"
+									required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
+								</div>
+								<div class="group">
+									<label for="pass" class="label">Ripeti Password</label>
+									<input name="pass" id="confirmPass" type="password" class="input" required>
+								</div>
+								<div class="group">
+									<label for="mail" class="label">Email</label>
+									<input name="mail" type="email" class="input" required>
+								</div>
+								<div class="group">
+									<input type="submit" class="button" value="Inserisci utente">
+								</div>
 							</form>
 						</div>
 					</div>
