--- a/HTML/AdminPanel.html
+++ b/HTML/AdminPanel.html
@@ -2,14 +2,14 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
 <head>
-	<title>Form Utente | Body Evolution</title>
+	<title>Admin Panel | Body Evolution</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
-	<script type="text/javascript" src="../JS/PswValidation.js" async></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -30,58 +30,19 @@
 			</div>
 		</div>
 		
-		<div id="Presentazione">
-				<h1 id="titoloPagina">AGGIUNGI UTENTE</h1>
+		<div id="Descrizione">
+			<div id="Presentazione">
+				<h1 id="titoloPagina">ADMIN PANEL</h1>
+				<p>Benvenuto nel pannello amministratore</p>
 			</div>
-		<div class="FormContainer">
-			<div class="containerChild">
-				<div class="leftContent">
-					<h1>Nuovo Utente</h1>
-					<p>Inserisci le credenziali di accesso per registrare un nuovo utente</p>
-				</div>
-				<div class="signupOverlay"></div>
-			</div>
-			<div class="containerChild">
-				<div class="loginWrap">
-					<div class="login-html">
-						<a href="AdminPanel.html"><div id="exit">&#215;</div></a>
-						<div class="login-form">							
-							<form action="/action_page.php">
-								<div class="group">
-									<label for="codice" class="label">Codice utente</label>
-									<input name="codice" type="text" class="input" required>
-								</div>
-								<div class="group">
-									<label for="nome" class="label">Nome</label>
-									<input name="nome" type="text" class="input" required>
-								</div>
-								<div class="group">
-									<label for="cognome" class="label">Cognome</label>
-									<input name="cognome" type="text" class="input" required>
-								</div>
-								<div class="group">
-									<label for="pass" class="label">Password</label>
-									<input name="pass" id="pass" type="password" class="input" title="La password deve essere lunga almeno 8 caratteri e contenere almeno un numero e una lettera"
-									required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
-								</div>
-								<div class="group">
-									<label for="pass" class="label">Ripeti Password</label>
-									<input name="pass" id="confirmPass" type="password" class="input" required>
-								</div>
-								<div class="group">
-									<label for="mail" class="label">Email</label>
-									<input name="mail" type="email" class="input" required>
-								</div>
-								<div class="group">
-									<input type="submit" class="button" value="Inserisci utente">
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
+			<div id="btnContainer">
+				<a href="Form utente.html"><button class="btn btn-1 btn-sep icon-adduser">Aggiungi utente</button></a>
+				<a href="Form news.html"><button class="btn btn-2 btn-sep icon-addnews">Aggiungi news</button></a>
+				<a href="Form galleria.html"><button class="btn btn-3 btn-sep icon-addphoto">Aggiungi foto</button></a>
+				<a href="#"><button class="btn btn-4 btn-sep icon-showusers">Mostra utenti</button></a>
 			</div>
 		</div>
-		
+
 		<div id="Footer">
 			<div id="footersx">
 				<a href="Home.html"><img id="logofooter" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
@@ -122,6 +83,6 @@
 			</div>
 		</div>
 	</div>
-
 </body>
 </html>
+
