--- a/HTML/Form galleria.html
+++ b/HTML/Form galleria.html
@@ -29,6 +29,9 @@
 			</div>
 		</div>
 		
+		<div id="Presentazione">
+				<h1 id="titoloPagina">AGGIUNGI FOTO</h1>
+			</div>
 		<div class="FormContainer">
 			<div class="containerChild">
 				<div class="leftContent">
@@ -40,7 +43,7 @@
 			<div class="containerChild">
 				<div class="loginWrap">
 					<div class="login-html">
-						<a href="Home.html"><div id="exit">&#215;</div></a>
+						<a href="AdminPanel.html"><div id="exit">&#215;</div></a>
 						<div class="login-form">							
 							<form method="post" action="PHP/testgalleria.php" enctype="multipart/form-data">
 								<div class="group">
