--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
-<body>
+<body id="calendariocorsi">
 	<div id="contenitore">
 		<div id="Intestazione">
 			<a class="sandwich" onclick="myFunction()">&#9776;</a>
@@ -77,11 +77,9 @@
 				<div class="separator"></div>
 				<ul class="oraricorsi">
 					<li>
-						<a href="Attivita.html#spinning">
 							<div class="corsovuoto">
 								<p class="corsovoce"></p>
 							</div>
-						</a>
 					</li>
 					
 					<li>
@@ -164,11 +162,9 @@
 				<div class="separator"></div>
 				<ul class="oraricorsi">
 					<li>
-						<a href="Attivita.html#spinning">
 							<div class="corsovuoto">
 								<p class="corsovoce"></p>
 							</div>
-						</a>
 					</li>
 					
 					<li>
