--- a/HTML/AdminPanel.html
+++ b/HTML/AdminPanel.html
@@ -8,7 +8,6 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 </head>
 
@@ -26,7 +25,7 @@
 			<a href="Calendario.html">Calendario</a>
 			<a href="ChiSiamo.html">Chi siamo</a>
 			<a href="DoveSiamo.html">Dove siamo</a>
-			<button disabled>Area Personale</button>
+			<button disabled="disabled">Area Personale</button>
 			</div>
 		</div>
 		
@@ -83,6 +82,8 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript" src="../JS/Sandwich.js"></script>
 </body>
 </html>
 
