--- a/HTML/Attivita.html
+++ b/HTML/Attivita.html
@@ -8,9 +8,6 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<script type="text/javascript" src="../JS/Popup.js" async></script>
-	<script type="text/javascript" src="../JS/Accordion.js" async></script>
-	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
 <body>
@@ -32,8 +29,8 @@
 		</div>
 		
 		<div id="Presentazione">
-				<h1 id="titoloPagina">ATTIVIT&Agrave</h1>
-				<p> Alla <span lang="en">Body Evolution</span> ti offriamo svariate attivit&agrave per migliorare la tua forma!<br />Scegli un corso per saperne di pi&ugrave </p>
+				<h1 id="titoloPagina">ATTIVIT&Agrave;</h1>
+				<p> Alla <span lang="en">Body Evolution</span> ti offriamo svariate attivit&agrave; per migliorare la tua forma!<br />Scegli un corso per saperne di pi&ugrave; </p>
 		</div>
 
 		<noscript id="noscriptAttivita">
@@ -46,10 +43,10 @@
 			<button id="powerpump" class="accordion">POWER PUMP</button>
 			<div class="panel">
 				<div>
-					<img class="courseimg" src="../IMAGES/powerpump.jpg" alt="powepump">
+					<img class="courseimg" src="../IMAGES/powerpump.jpg" alt="powepump"/>
 				</div>
 				<p>TONIFICAZIONE - MODELLAMENTO DELLA FIGURA - GLUTEI SODI E TONICI - AUMENTO RESISTENZA</p>
-				<p>Corso di gruppo divertente e completo per <span class="bold">dimagrire</span> e tonificarsi su base muscolare.<br /><br />Un allenamento mirano alla <span class="bold">tonificazione</span> muscolare e delle forza resistente attraverso il costante utilizzo del bilanciere a peso regolabile, cavigliere e pesetti, squat, trazioni, distensioni, spinte con colonne sonore che allieteranno la lezione.<br /><br />Esercizi completi ti faranno riscoprire il tuo corpo, donando nuova <span class="bold">energia e vitalit&agrave</span> alla tua figura.<br />La lezione dura <span class="bold">45 minuti</span>.</p>
+				<p>Corso di gruppo divertente e completo per <span class="bold">dimagrire</span> e tonificarsi su base muscolare.<br /><br />Un allenamento mirano alla <span class="bold">tonificazione</span> muscolare e delle forza resistente attraverso il costante utilizzo del bilanciere a peso regolabile, cavigliere e pesetti, squat, trazioni, distensioni, spinte con colonne sonore che allieteranno la lezione.<br /><br />Esercizi completi ti faranno riscoprire il tuo corpo, donando nuova <span class="bold">energia e vitalit&agrave;</span> alla tua figura.<br />La lezione dura <span class="bold">45 minuti</span>.</p>
 			</div>
 		</div>
 		
@@ -57,10 +54,10 @@
 			<button id="spinning" class="accordion">SPINNING</button>
 			<div class="panel">
 				<div>
-					<img class="courseimg" src="../IMAGES/spinning.jpg" alt="powepump">
+					<img class="courseimg" src="../IMAGES/spinning.jpg" alt="powepump"/>
 				</div>
-				<p>GRUPPO - DIVERTIMENTO - BICICLETTA STAZIONARIA - INTENSIT&Agrave PEDALATA - CONSUMO CALORICO</p>
-				<p>Lo spinning &egrave una <span class="bold">attivit&agrave aerobica di gruppo</span>, divertente e coinvolgente, attraverso dei percorsi <span class="bold">virtuali</span> creati con video e tour paesaggistici, con l'iscritto utilizzando una <span class="bold">bicicletta stazionaria</span>, pu&ograve migliorare le proprie capacit&agrave organiche attraverso concentrazione e coinvolgimento portando la mente a superare la fatica fisica.<br /><br /><span class="bold">La pedalata a varie velocit&agrave</span>, diretta dall'Istruttore e unita alla tecnica di concentrazione e coinvolgimento del gruppo, rendono piacevole e divertente la lezione.<br /><br /> Le lezioni durano <span class="bold">45 minuti</span> e grazie all'ottimo allenamento aerobico portano a un <span class="bold">grosso dispendio calorico</span> (500-800 caloreie a lezione).</p>
+				<p>GRUPPO - DIVERTIMENTO - BICICLETTA STAZIONARIA - INTENSIT&Agrave; PEDALATA - CONSUMO CALORICO</p>
+				<p>Lo spinning &egrave; una <span class="bold">attivit&agrave; aerobica di gruppo</span>, divertente e coinvolgente, attraverso dei percorsi <span class="bold">virtuali</span> creati con video e tour paesaggistici, con l'iscritto utilizzando una <span class="bold">bicicletta stazionaria</span>, pu&ograve; migliorare le proprie capacit&agrave; organiche attraverso concentrazione e coinvolgimento portando la mente a superare la fatica fisica.<br /><br /><span class="bold">La pedalata a varie velocit&agrave;</span>, diretta dall'Istruttore e unita alla tecnica di concentrazione e coinvolgimento del gruppo, rendono piacevole e divertente la lezione.<br /><br /> Le lezioni durano <span class="bold">45 minuti</span> e grazie all'ottimo allenamento aerobico portano a un <span class="bold">grosso dispendio calorico</span> (500-800 caloreie a lezione).</p>
 			</div>
 		</div>
 
@@ -68,12 +65,12 @@
 			<button id="fitboxe" class="accordion">FITBOXE</button>
 			<div class="panel">
 				<div>
-					<img class="courseimg" src="../IMAGES/fitboxe.jpg" alt="powepump">
+					<img class="courseimg" src="../IMAGES/fitboxe.jpg" alt="powepump"/>
 				</div>
 				<p> DIMAGRIRE - PREVENIRE MALATTIA CARDIOVASCOLARI - RASSODARE - RILLASSARSI E SCARICARE TENSIONI- DIVERTIRSI - IMPARARE A DIFENDERSI</p>
-				<p>Attivit&agrave di gruppo: <span class="bold">esplosiva, divertente e liberatoria</span>. <br><br>Ogni lezione unisce l'aerobica alle arti marziali. Calci, pugni, ginocchiate, gomitate in un coinvolgente <span class="bold">crescendo musicale</span> che trasforma le <span class="bold">tecniche di combattimento</span> in una danza fatale.<br /><br />
-				Questa disciplina, giocosa e coinvolgente, consente di scaricare in maniera positiva l'aggressivit&agrave accumulata nella vita di tutti i giorni. Il risultato &egrave un mix di benessere e piacere che ci permette di essere in forma imparando a difendersi.<br /><br />
-				&Egrave uno sport praticabile ad ogni et&agrave, migliora la forma fisica attraverso un allenamento aerobico. La lezione dura <span class="bold">45 minuti</span>.</p>
+				<p>Attivit&agrave; di gruppo: <span class="bold">esplosiva, divertente e liberatoria</span>. <br></br>Ogni lezione unisce l'aerobica alle arti marziali. Calci, pugni, ginocchiate, gomitate in un coinvolgente <span class="bold">crescendo musicale</span> che trasforma le <span class="bold">tecniche di combattimento</span> in una danza fatale.<br /><br />
+				Questa disciplina, giocosa e coinvolgente, consente di scaricare in maniera positiva l'aggressivit&agrave; accumulata nella vita di tutti i giorni. Il risultato &egrave; un mix di benessere e piacere che ci permette di essere in forma imparando a difendersi.<br /><br />
+				&Egrave; uno sport praticabile ad ogni et&agrave;, migliora la forma fisica attraverso un allenamento aerobico. La lezione dura <span class="bold">45 minuti</span>.</p>
 			</div>
 		</div>
 		
@@ -81,10 +78,10 @@
 			<button id="jumpfit" class="accordion">JUMP FIT</button>
 			<div class="panel">
 				<div>
-					<img class="courseimg" src="../IMAGES/jumpfit.jpg" alt="powepump">
+					<img class="courseimg" src="../IMAGES/jumpfit.jpg" alt="powepump"/>
 				</div>
 				<p>DIVERTIMENTO - TONIFICAZIONE - SENSO DI EQUILIBRIO - BRUCIARE GRASSO - SVAGO ASSOLUTO</p>
-				<p>Attivit&agrave aerobica di gruppo ad <span class="bold">impatto zero</span> che <span class="bold">incrementa la circolazione del sangue</span> e aumenta le capacit&agrave di cuore e polmoni.<br><br> Migliora il <span class="bold">senso di equilibrio</span>; rinforza i vostri uscoli; fornisce un effetto aerobico; vi distende quando siete tesi e vi rimette in forma quando siete stanchi. Ottimo per <span class="bold">perdere peso velocemente</span> divertendosi. Le articolazioni si rafforzano senza subire lo stress del impatto a terra.<br /><br /> Ideale a tutte le et&agrave, per chu vuole rimettersi in forma e bruciare grasso e calorie <span class="bold">ritorndando bambino</span>.<br /><br /> Salti a ritmo di musica allieteranno l'allenamento della durata di <span class="bold">45 minuti</span>.</p>
+				<p>Attivit&agrave; aerobica di gruppo ad <span class="bold">impatto zero</span> che <span class="bold">incrementa la circolazione del sangue</span> e aumenta le capacit&agrave; di cuore e polmoni.<br></br> Migliora il <span class="bold">senso di equilibrio</span>; rinforza i vostri uscoli; fornisce un effetto aerobico; vi distende quando siete tesi e vi rimette in forma quando siete stanchi. Ottimo per <span class="bold">perdere peso velocemente</span> divertendosi. Le articolazioni si rafforzano senza subire lo stress del impatto a terra.<br /><br /> Ideale a tutte le et&agrave;, per chu vuole rimettersi in forma e bruciare grasso e calorie <span class="bold">ritorndando bambino</span>.<br /><br /> Salti a ritmo di musica allieteranno l'allenamento della durata di <span class="bold">45 minuti</span>.</p>
 			</div>
 		</div>
 		
@@ -92,10 +89,10 @@
 			<button id="step" class="accordion">STEP</button>
 			<div class="panel">
 				<div>
-					<img class="courseimg" src="../IMAGES/step.jpg" alt="powepump">
+					<img class="courseimg" src="../IMAGES/step.jpg" alt="powepump"/>
 				</div>
 				<p>PERDITA DI PESO - DIVERTIMENTO - TONIFICAZIONE - AUMENTO COORDINAZIONE</p>
-				<p>La lezione di step prevede una serie di esercizi dinamici di <span class="bold">salita e discesa dalla piattaforma</span> seguendo un ritmo costante scandito dalla musica e dai comandi dell'istruttore.<br /><br /> L'attivit&agrave eseguita sullo step migliora l'efficienza dell'apparato <span class="bold">cardio-vascolare</span> e nello stesso tempo si agisce sullo stato tonico-trofico degli arti inferiori con un lavoro di alta intensit&agrave, ma a basso impatto.<br /><br /> Ogni lezione ha durata pari a <span class="bold">45 minuti</span>. Le coreografie permettono di divertirsi e scaricare gli stress producendo un ottimo <span class="bold">consumo calorico</span>. Alla fine di ogni lezione daremo spazio ad esercizi per <span class="bold">glutei e addominali</span>. Divertimento assicurato e risultati evidenti.</p>
+				<p>La lezione di step prevede una serie di esercizi dinamici di <span class="bold">salita e discesa dalla piattaforma</span> seguendo un ritmo costante scandito dalla musica e dai comandi dell'istruttore.<br /><br /> L'attivit&agrave; eseguita sullo step migliora l'efficienza dell'apparato <span class="bold">cardio-vascolare</span> e nello stesso tempo si agisce sullo stato tonico-trofico degli arti inferiori con un lavoro di alta intensit&agrave;, ma a basso impatto.<br /><br /> Ogni lezione ha durata pari a <span class="bold">45 minuti</span>. Le coreografie permettono di divertirsi e scaricare gli stress producendo un ottimo <span class="bold">consumo calorico</span>. Alla fine di ogni lezione daremo spazio ad esercizi per <span class="bold">glutei e addominali</span>. Divertimento assicurato e risultati evidenti.</p>
 			</div>
 		</div>
 		</div>
@@ -140,6 +137,9 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript" src="../JS/Accordion.js"></script>
+	<script type="text/javascript" src="../JS/Sandwich.js"></script>
 
 </body>
 </html>
