--- a/HTML/Calendario.html
+++ b/HTML/Calendario.html
@@ -8,7 +8,6 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
 <body id="calendariocorsi">
@@ -42,6 +41,7 @@
 					<li>10:15-11:15</li>
 					<li>19:00-19:45</li>
 					<li>19:45-20:30</li>
+				</ul>
 			</div>
 			<div class="vocecalendario">
 				<h2 class="giornovoce">Lunedì</h2>
@@ -226,6 +226,8 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript" src="../JS/Sandwich.js"></script>
 
 </body>
 </html>
