--- a/HTML/DoveSiamo.html
+++ b/HTML/DoveSiamo.html
@@ -8,9 +8,6 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<script type="text/javascript" src="../JS/Maps.js" async></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy9ePX9YzCd4SvN7AJ8oNL6-2uue4rh6g&callback=myMap" async></script>
-	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
 </head>
 
 <body>
@@ -83,6 +80,11 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript" src="../JS/Maps.js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDy9ePX9YzCd4SvN7AJ8oNL6-2uue4rh6g&amp;callback=myMap"></script>
+	<script type="text/javascript" src="../JS/Sandwich.js"></script>
+	
 </body>
 </html>
 
