--- a/HTML/Form utente.html
+++ b/HTML/Form utente.html
@@ -8,8 +8,6 @@
 	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
 	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<script type="text/javascript" src="../JS/Sandwich.js" async></script>
-	<script type="text/javascript" src="../JS/PswValidation.js" async></script>
 </head>
 
 <body>
@@ -26,7 +24,7 @@
 			<a href="Calendario.html">Calendario</a>
 			<a href="ChiSiamo.html">Chi siamo</a>
 			<a href="DoveSiamo.html">Dove siamo</a>
-			<button disabled>Area Personale</button>
+			<button disabled="disabled">Area Personale</button>
 			</div>
 		</div>
 		
@@ -44,36 +42,36 @@
 			<div class="containerChild">
 				<div class="loginWrap">
 					<div class="login-html">
-						<a href="AdminPanel.html"><div id="exit">&#215;</div></a>
+						<a href="AdminPanel.html"><span id="exit">&#215;</span></a>
 						<div class="login-form">							
 							<form action="/action_page.php">
 								<div class="group">
-									<label for="codice" class="label">Codice utente</label>
-									<input name="codice" type="text" class="input" required>
+									<label class="label">Codice utente</label>
+									<input type="text" class="input" required="required"/>
 								</div>
 								<div class="group">
-									<label for="nome" class="label">Nome</label>
-									<input name="nome" type="text" class="input" required>
+									<label class="label">Nome</label>
+									<input type="text" class="input" required="required"/>
 								</div>
 								<div class="group">
-									<label for="cognome" class="label">Cognome</label>
-									<input name="cognome" type="text" class="input" required>
+									<label class="label">Cognome</label>
+									<input type="text" class="input" required="required"/>
 								</div>
 								<div class="group">
-									<label for="pass" class="label">Password</label>
-									<input name="pass" id="pass" type="password" class="input" title="La password deve essere lunga almeno 8 caratteri e contenere almeno un numero e una lettera"
-									required pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$">
+									<label class="label">Password</label>
+									<input id="pass" type="password" class="input" title="La password deve essere lunga almeno 8 caratteri e contenere almeno un numero e una lettera"
+									required="required" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"/>
 								</div>
 								<div class="group">
-									<label for="pass" class="label">Ripeti Password</label>
-									<input name="pass" id="confirmPass" type="password" class="input" required>
+									<label class="label">Ripeti Password</label>
+									<input id="confirmPass" type="password" class="input" required="required"/>
 								</div>
 								<div class="group">
-									<label for="mail" class="label">Email</label>
-									<input name="mail" type="email" class="input" required>
+									<label class="label">Email</label>
+									<input type="email" class="input" required="required"/>
 								</div>
 								<div class="group">
-									<input type="submit" class="button" value="Inserisci utente">
+									<input type="submit" class="button" value="Inserisci utente"/>
 								</div>
 							</form>
 						</div>
@@ -122,6 +120,9 @@
 			</div>
 		</div>
 	</div>
+	
+	<script type="text/javascript" src="../JS/Sandwich.js"></script>
+	<script type="text/javascript" src="../JS/PswValidation.js"></script>
 
 </body>
 </html>
