--- a/HTML/Form galleria.html
+++ b/HTML/Form galleria.html
@@ -46,12 +46,12 @@
 						<div class="login-form">							
 							<form id="galleryForm" method="post" action="PHP/testgalleria.php" enctype="multipart/form-data" onsubmit="return validateGalleryForm()">
 								<div class="group">
-									<label class="label">Nome album</label>
-									<input id="galleryName" type="text" class="input"/>
+									<label for="galleryName" class="label">Nome album</label>
+									<input name="galleryName" id="galleryName" type="text" class="input"/>
 								</div>
 								<div class="group">
-									<label class="label">File</label>
-									<input id="galleryFile" type="file" class="input" accept="image/*" multiple="multiple"/>
+									<label for="galleryFile" class="label">File</label>
+									<input name="galleryFile" id="galleryFile" type="file" class="input" accept="image/*" multiple="multiple"/>
 								</div>
 								<div class="group">
 									<input type="submit" class="button" value="Inserisci file"/>
