Separati PHP e HTML da tutti i file

--- a/HTML/AreaPersonale.html
+++ b/HTML/AreaPersonale.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-		
-<?php require_once('config.php'); ?>
 
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
 <head>
@@ -17,16 +15,16 @@
 	<div id="contenitore">
 		<div id="Intestazione">
 			<a class="sandwich" onclick="myFunction()">&#9776;</a>
-			<a href="Home.php"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
+			<a href="../PHP/Home.php"><img id="logo" src="../IMAGES/logo.png" alt="Body Evolution logo"/></a>
 			<a class="active"><img id="user" src="../IMAGES/user.png" alt="login utente"/></a>
 			<div class="Menu" id="myMenu">
-			<a href="Home.php">Home</a>
-			<a href="Attivita.php">Attivit&agrave;</a>
-			<a href="News.php"><span xml:lang="en">News</span></a>
-			<a href="Galleria.php">Galleria</a>
-			<a href="Calendario.php">Calendario</a>
-			<a href="ChiSiamo.php">Chi siamo</a>
-			<a href="DoveSiamo.php">Dove siamo</a>
+			<a href="../PHP/Home.php">Home</a>
+			<a href="../PHP/Attivita.php">Attivit&agrave;</a>
+			<a href="../PHP/News.php"><span xml:lang="en">News</span></a>
+			<a href="../PHP/Galleria.php">Galleria</a>
+			<a href="../PHP/Calendario.php">Calendario</a>
+			<a href="../PHP/ChiSiamo.php">Chi siamo</a>
+			<a href="../PHP/DoveSiamo.php">Dove siamo</a>
 			<button disabled="disabled">Area Personale</button>
 			</div>
 		</div>
@@ -43,7 +41,7 @@
 				<div class="loginWrap">
 					<div class="login-html">
 						<h1>Sign In</h1>
-						<a href="Home.php"><span id="exit">&#215;</span></a>
+						<a href="../PHP/Home.php"><span id="exit">&#215;</span></a>
 						<div class="login-form">
 							<form id="PersonalAreaForm" action="../PHP/login.php" method="post" onsubmit="return validatePersonalAreaForm()">
 								<div class="group">
