--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
 <head>
 	<title>Home | Body Evolution</title>
-	<meta http-equiv="refresh" content="0;url='../PHP/Home.php'"> 
+	<meta http-equiv="refresh" content="0;url='../PHP/Home.php'"/> 
 </head>
 <body>
 </body>
