--- a/HTML/AreaPersonale.html
+++ b/HTML/AreaPersonale.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
+<!DOCTYPE html>
+<html lang="it">
 <head>
 	<title>Area Personale | Body Evolution</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link href="../CSS/Desktop.css" rel="stylesheet" type="text/css" media="handheld, screen"/>
-	<link href="../CSS/Mobile.css" rel="stylesheet" type="text/css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
-	<link href="../CSS/Print.css" rel="stylesheet" type="text/css" media="print"/>
+	<meta charset="utf-8">
+	<link href="../CSS/Desktop.css" rel="stylesheet" media="handheld, screen"/>
+	<link href="../CSS/Mobile.css" rel="stylesheet" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)"/>
+	<link href="../CSS/Print.css" rel="stylesheet" media="print"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
@@ -25,7 +23,7 @@
 			<a href="../PHP/Calendario.php">Calendario</a>
 			<a href="../PHP/ChiSiamo.php">Chi siamo</a>
 			<a href="../PHP/DoveSiamo.php">Dove siamo</a>
-			<button disabled="disabled">Area Personale</button>
+			<button disabled>Area Personale</button>
 			</div>
 		</div>
 		
@@ -43,14 +41,14 @@
 						<h1>Sign In</h1>
 						<a href="../PHP/Home.php"><span id="exit">&#215;</span></a>
 						<div class="login-form">
-							<form id="PersonalAreaForm" action="../PHP/login.php" method="post" onsubmit="return validatePersonalAreaForm()">
+							<form id="PersonalAreaForm" action="../PHP/login.php" method="post">
 								<div class="group">
 									<label for="userCode" class="label">Codice utente</label>
-									<input name="userCode" id="userCode" type="text" class="input"/>
+									<input name="userCode" id="userCode" type="text" class="input" required />
 								</div>
 								<div class="group">
 									<label for="pass" class="label">Password</label>
-									<input name="pass" id="pass" type="password" class="input"/>
+									<input name="pass" id="pass" type="password" class="input" required />
 								</div>
 								<div class="group">
 									<input type="submit" class="button" value="Sign In"/>
@@ -103,8 +101,8 @@
 		</div>
 	</div>
 	
-	<script type="text/javascript" src="../JS/Sandwich.js"></script>
-	<script type="text/javascript" src="../JS/FormValidation.js"></script>
+	<script src="../JS/Sandwich.js"></script>
+	<script src="../JS/PswValidation.js"></script>
 
 </body>
 </html>
