--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-		
-<html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="it" lang="it">
+<!DOCTYPE html>
+<html lang="it">
 <head>
 	<title>Home | Body Evolution</title>
 	<meta http-equiv="refresh" content="0;url='../PHP/Home.php'"/> 
