Corretto indirizzamento area personale

--- a/HTML/ErroreLogin.html
+++ b/HTML/ErroreLogin.html
@@ -23,7 +23,7 @@
 			<a href="../PHP/Calendario.php">Calendario</a>
 			<a href="../PHP/ChiSiamo.php">Chi siamo</a>
 			<a href="../PHP/DoveSiamo.php">Dove siamo</a>
-			<button onclick="window.location.href='AreaPersonale.html'">Area Personale</button>
+			<button onclick="window.location.href='../PHP/AreaPersonale.php'">Area Personale</button>
 		</div>
 	</div>
 	
@@ -31,7 +31,7 @@
 		<div class="messagetext">
 			<h2>Si è verificato un'errore:</h2>
 			<h4>Il Codice Utente o la Password inseriti non sono corretti.</h4>
-			<a class="messagelink" href="AreaPersonale.html">Per reinserire i dati cliccare qui</a>
+			<a class="messagelink" href="../PHP/AreaPersonale.php">Per reinserire i dati cliccare qui</a>
 			<a class="messagelink" href="../PHP/Home.php">Ritorna alla homepage</a>
 		</div>
 		
