--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
 	<title>Home | Body Evolution</title>
-	<meta http-equiv="refresh" content="0;url='../PHP/Home.php'"/> 
+	<meta http-equiv="refresh" content="0;url='./PHP/Home.php'"/>
 </head>
 <body>
 </body>
