--- a/error404.html
+++ b/error404.html
@@ -4,10 +4,10 @@
 	<title>Errore 404 | Body Evolution</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link href="../CSS/Desktop.css" rel="stylesheet"/>
-	<link href="../CSS/Tablet.css" rel="stylesheet" media="(min-width:768px) and (max-width:1024px)"/>
-	<link href="../CSS/Mobile.css" rel="stylesheet" media="(max-width: 767px)"/>
-	<link href="../CSS/Print.css" rel="stylesheet" media="print"/>
+	<link href="./CSS/Desktop.css" rel="stylesheet"/>
+	<link href="./CSS/Tablet.css" rel="stylesheet" media="(min-width:768px) and (max-width:1024px)"/>
+	<link href="./CSS/Mobile.css" rel="stylesheet" media="(max-width: 767px)"/>
+	<link href="./CSS/Print.css" rel="stylesheet" media="print"/>
 </head>
 
 <body>
@@ -25,7 +25,6 @@
 				<a href="PHP/Calendario.php">Calendario</a>
 				<a href="PHP/chiSiamo.php">Chi siamo</a>
 				<a href="PHP/doveSiamo.php">Dove siamo</a>
-				<button title="Effettua il login" onclick="window.location.href='PHP/areaPersonale.php'">Area Personale</button>
 			</div>
 		</div>
 		
